# bbclean-xzero450

./: .gitignore
BlackboxZero/: CMakeLists.txt  blackbox.rc  build_all_mingw.bat  build_all_msys.sh  build_all_vs2012.bat  build_all_vs2012_xp.bat  build_pack.bat  plugins.rc  run_generator_eclipse.bat  run_generator_mingw.bat  run_generator_mingw.sh  run_generator_msys.sh  run_generator_vs2012.bat  run_generator_vs2012_xp.bat
BlackboxZero/blackbox/: BB.h  BBApi.cpp  BBApi.h  BBApiPluginloader.h  BBRoot.cpp  BBVWM.cpp  BBVWM.h  Blackbox.cpp  CMakeLists.txt  ConfigMenu.cpp  Desk.cpp  PluginManager.cpp  Settings.cpp  Settings.h  Toolbar.cpp  Workspaces.cpp  resource.rc  win0x500.h
BlackboxZero/blackbox/Hooks/: CMakeLists.txt
BlackboxZero/blackbox/Menu/: Menu.cpp  Menu.h  MenuItem.cpp  MenuMaker.cpp  SpecialFolder.cpp
BlackboxZero/blackbox/PluginManager/: PluginLoaderNative.cpp  PluginLoaderNative.h  PluginManager.cpp  Types.h
BlackboxZero/docs/: build_with_cmake.txt
BlackboxZero/fonts/: fonts.cmake
BlackboxZero/installer/: blackbox.nsi  mk_build.bat
BlackboxZero/lib/: CMakeLists.txt  bblib.h  bbrc.c  bbrc.h  bbroot.c  bools.c  colors.c  moreutils.c  paths.c  pidl.c  strings.c  winutils.c
BlackboxZero/plugins/BB8Ball/: BB8Ball.cpp  BB8Ball.dsp  BB8Ball.dsw  BB8Ball.h  BB8Ball.ncb  BB8Ball.opt  BB8Ball.plg  BBApi.h  BBMessageBox.h  CMakeLists.txt  readme.txt
BlackboxZero/plugins/BBAnalogEx/: CMakeLists.txt  Resource.aps  Resource.rc  bbanalogex.cpp  bbanalogex.dsp  bbanalogex.dsw  bbanalogex.h  bbanalogex.ncb  bbanalogex.opt  bbanalogex.plg  readme.txt
BlackboxZero/plugins/BBCalendar/: BBCalendar.html  CMakeLists.txt  MessageBo1x.h  Resource.aps  Resource.rc  bbcalendar.cpp  bbcalendar.dsp  bbcalendar.dsw  bbcalendar.h  bbcalendar.ncb  bbcalendar.opt  bbcalendar.plg  readme.txt
BlackboxZero/plugins/BBDigitalEx/: BBApi.h  CMakeLists.txt  Resource.aps  Resource.rc  bbanologex.opt  bbdigitalex.cpp  bbdigitalex.dsp  bbdigitalex.dsw  bbdigitalex.h  bbdigitalex.ncb  bbdigitalex.opt  bbdigitalex.plg  readme.txt  resource.h
BlackboxZero/plugins/BBMagnify/: CMakeLists.txt  Resource.rc  bbmagnify.cpp  bbmagnify.dsp  bbmagnify.dsw  bbmagnify.h  bbmagnify.ncb  bbmagnify.opt  bbmagnify.plg  readme.txt
BlackboxZero/plugins/BBMessageBox/: BBMessageBox.cpp  BBMessageBox.dsp  BBMessageBox.dsw  BBMessageBox.h  BBMessageBox.ncb  BBMessageBox.opt  BBMessageBox.plg  CMakeLists.txt  Resource.aps  Resource.rc  bbcalendar.ncb  bbcalendar.opt  resource.h
BlackboxZero/plugins/BBNoter/: Resource.aps  bbnoter.cpp  bbnoter.dsp  bbnoter.dsw  bbnoter.h  bbnoter.ncb  bbnoter.opt  bbnoter.plg  readme.txt
BlackboxZero/plugins/BBNoter_new/: Resource.rc  bbnoter.cpp  bbnoter.dsp  bbnoter.dsw  bbnoter.h  bbnoter.ncb  bbnoter.opt  bbnoter.plg  getStats.cpp  getStats.h  readme.txt
BlackboxZero/plugins/BBNoter_old/: BBnoter.html  Resource.aps  bbnoter.cpp  bbnoter.dsp  bbnoter.dsw  bbnoter.h  bbnoter.ncb  bbnoter.opt  bbnoter.plg  bbnoter.vcproj
BlackboxZero/plugins/BBNoter_old/gdi/: GdiPlusMatrix.h
BlackboxZero/plugins/BBPager/: BBPager.cpp  CMakeLists.txt
BlackboxZero/plugins/BBRSS/: CMakeLists.txt  Resource.aps  bbanologex.ncb  bbrss.cpp  bbrss.dsp  bbrss.dsw  bbrss.h  bbrss.ncb  bbrss.opt  bbrss.plg  readme.txt  resource.h
BlackboxZero/plugins/BBStyle/: BBStyle.cpp  CMakeLists.txt
BlackboxZero/plugins/BBSysMeter/: CMakeLists.txt  bbsysmeter.cpp  bbsysmeter.dsp  bbsysmeter.dsw  bbsysmeter.h  bbsysmeter.ncb  bbsysmeter.opt  bbsysmeter.plg  getStats.cpp  getStats.h  readme.txt
BlackboxZero/plugins/BBXO/: CMakeLists.txt  Resource.aps  Resource.rc  bbxo.cpp  bbxo.dsp  bbxo.dsw  bbxo.h  bbxo.ncb  bbxo.opt  bbxo.plg  bbxo.vcproj
BlackboxZero/plugins/SystemBarEx/: CMakeLists.txt  SystemBarEx.cpp  SystemBarEx.h  TinyDropTarg.cpp  bbAbout.cpp  bbTooltip.cpp  bbTooltip.h  systembarex.rc
BlackboxZero/plugins/SystemBarEx/bb4win/: makefile-gcc
BlackboxZero/plugins/bbAnalog/: CMakeLists.txt
BlackboxZero/plugins/bbColor3dc/: CMakeLists.txt  bbColor3dc.cpp
BlackboxZero/plugins/bbFoomp/: CMakeLists.txt  bbFoomp.htm
BlackboxZero/plugins/bbFoomp/src/: bbfoomp.cpp  bbfoomp.h
BlackboxZero/plugins/bbIconBox/: CMakeLists.txt  LoadFolder.cpp  bbIconBox.cpp
BlackboxZero/plugins/bbInterface/: AgentType_Bitmap.cpp  AgentType_Broam.cpp  AgentType_CompoundText.cpp  AgentType_Graph.cpp  AgentType_SwitchedState.cpp  AgentType_SystemMonitor.cpp  AgentType_TGA.cpp  AgentType_Winamp.cpp  BBApi2.h  CMakeLists.txt  ConfigMaster.cpp  ControlMaster.cpp  ControlMaster.h  ControlType_Button.cpp  ControlType_Label.cpp  ControlType_Slider.cpp  MenuMaster.cpp  MessageMaster.cpp  ModuleMaster.cpp  PluginMaster.cpp  SlitManager.cpp  StyleMaster.cpp  WindowMaster.cpp
BlackboxZero/plugins/bbInterface_iTunes/: CMakeLists.txt
BlackboxZero/plugins/bbInterface_iTunes/src/: AgentType_AutoScaleGraph.cpp  AgentType_Bitmap.cpp  AgentType_Broam.cpp  AgentType_Graph.cpp  (+21 more)
BlackboxZero/plugins/bbKeys/: CMakeLists.txt  bbKeys.cpp
BlackboxZero/plugins/bbLeanBar/: CMakeLists.txt  bbLeanBar.cpp
BlackboxZero/plugins/bbLeanBar+/: CMakeLists.txt  bbLeanBar+.cpp  moreutils+.cpp
BlackboxZero/plugins/bbLeanSkin/: CMakeLists.txt  bbLeanSkin.cpp  exclusions.rc
BlackboxZero/plugins/bbPlugin/: CMakeLists.txt  bbPlugin.cpp  tooltips.cpp
BlackboxZero/plugins/bbPlugin+/: CMakeLists.txt  bbPlugin+.cpp  bbPlugin+.h
BlackboxZero/plugins/bbRecycleBin/: CMakeLists.txt  bbrecyclebin.cpp
BlackboxZero/plugins/bbSlit/: CMakeLists.txt
BlackboxZero/plugins/bbWorkspaceWheel/: CMakeLists.txt
BlackboxZero/plugins/bbpsource/: BBPager.cpp  BBPager.dsp  BBPager.dsw  BBPager.h  BBPager.ncb  BBPager.opt  BBPager.plg  BBPager1.dsp  BBPager1.plg  Drawing.cpp  Settings.cpp  Style.cpp
BlackboxZero/plugins/common/: MessageBox.cpp
BlackboxZero/tools/bbnote/: CMakeLists.txt  bbapi-small.cpp  edfiles.cpp  edfunc.cpp  edprint.cpp
BlackboxZero/tools/bbstylemaker/: CMakeLists.txt  main.cpp  rcfile.cpp  readroot.cpp  writestyle.cpp
BlackboxZero/tools/bsetroot/: CMakeLists.txt
BlackboxZero/tools/bsetshell/: CMakeLists.txt  bsetshell.cpp
(+9 files in other folders)
